added rhymezone index

--- a/web/result.html
+++ b/web/result.html
@@ -18,14 +18,14 @@
 
 <div class="resultCell">
     <div class="lyricsCell">
-        Here is a rhyme that is very clever, blah blah, more words <span class="rhymeWord">word</span>
+        Here is a rhyme that is very clever, blah blah, more words <span class="rhymePart">word</span>
     </div>
     <div class="artistCell"><span class="artistname">Wu-Tang Clan</span> - Can't It Be So Simple?
     </div>
 </div>
 <div class="resultCell">
     <div class="lyricsCell">
-        Here is a rhyme that is very clever, blah blah, more words <span class="rhymeWord">word</span>
+        Here is a rhyme that is very clever, blah blah, more words <span class="rhymePart">word</span>
     </div>
     <div class="artistCell"><span class="artistname">Wu-Tang Clan</span> - Can't It Be So Simple?
     </div>
